Fix drag scrolling
When dragging items down, the list wouldn't scroll because the bottom
part of the list was hidden by the search box.  We now limit the size
of the box.

This also always maxes out the height of the popup.  This stopped an
issue I was seeing where occasionally the popup ended up being super
short (like maybe 100px).

--- a/css/popup.css
+++ b/css/popup.css
@@ -7,11 +7,17 @@ body{
   padding:0px;
   margin:0px;
   -webkit-user-select:none;
+  height:5000;
+  overflow-y:hidden;
+}
+.outer{
+  height:100%;
+  width:100%;
+  overflow-y:hidden;
 }
 .window{
   width:430px;
   display:inline-block;
-  position:relative;
   padding-top:10px;
   margin-top:10px;
   border-top:1px solid #b2b2b2;
@@ -33,6 +39,14 @@ body{
   padding-left:0px;
   margin-left:0px;
   border-left:none;
+}
+.window.container{
+  position:fixed;
+  bottom:40px;
+  top:0px;
+  padding-top:10px;
+  padding-bottom:5px;
+  overflow-y:scroll;
 }
 .icon{
   height:20px;
